--- a/buf.yaml
+++ b/buf.yaml
@@ -5,8 +5,8 @@ modules:
 lint:
   use:
     - DEFAULT
+  ignore:
+    - proto/google/type/datetime.proto
 breaking:
   use:
     - FILE
-deps:
-  - buf.build/googleapis/googleapis
